@@ -1,3 +1,8 @@
+2019-07-07  Tatsuya Kinoshita  <tats@debian.org>
+
+	* mime-view.el (mime-display-multipart/multilingual-prefered-languages):
+	Check for `get-language-info' existence.
+
 2019-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-image.el (mime-image-create): Update native image scaling
